--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ FLASK_APP=word-tier-list-back.app.py
 MAIL_USERNAME=admin
 MAIL_PASSWORD=z6HFhyO952qVJvAT
 DATABASE_NAME=word_tier_list
-DATABASE_URI=mongodb+srv://admin:z6HFhyO952qVJvAT@cluster0.ay330.mongodb.net/word_tier_list?retryWrites=true&w=majority
+DATABASE_URI="mongodb+srv://admin:z6HFhyO952qVJvAT@cluster0.ay330.mongodb.net/word_tier_list?retryWrites=true&w=majority"
